# prog_objet_s4

./: CMakeLists.txt  README.md
assets/models/: pacman_ghost_cube_v4.mtl  seance6_switch.mtl
assets/models/pacman_cube_v3/: pacman_cube_v36.mtl
src/: main.cpp  program.h  shader.h  sphere.h
src/shaders/: 3D.vs.glsl  normals.fs.glsl
